[package]
name = "abyss-lang"
version = "0.0.1"
edition = "2021"
authors = ["liebe-magi <liebe.magi@gmail.com>"]
description = "AbySS: Advanced-scripting by Symbolic Syntax"
readme = "README.md"
repository = "https://github.com/liebe-magi/AbySS"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
pest = "2.7.11"
pest_derive = "2.7.11"

[[bin]]
name = "abyss"
path = "src/main.rs"